fix: aside 컴포넌트의 z-index 값 수정

--- a/components/aside/Aside.module.scss
+++ b/components/aside/Aside.module.scss
@@ -28,7 +28,7 @@
   padding-top: 1rem;
   padding-bottom: 1rem;
   position: fixed;
-  z-index: 999;
+  z-index: 99;
   background-color: var(--bg-color);
   border-bottom: 1px solid var(--bg-color);
   transition: border-color 0.3s ease, transform 0.3s ease;
